--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p Deepika Alapati
+  button(type='button',class='btn btn-secondary') press me
+  
