--- a/views/index.pug
+++ b/views/index.pug
@@ -6,3 +6,5 @@ block content
   p Deepika Alapati
   button(type='button',class='btn btn-secondary') press me
   
+  <div id='bump'>Bump the count</div>
+  
