--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,18 @@ block content
   p Deepika Alapati
   button(type='button',class='btn btn-secondary') press me
   
-  <div id='bump'>Bump the count</div>
+  br
+  div#bump Bump the count 
+  br
   
+  script.
+      var count=0;
+      var bump=1;
+      function doBump(){
+      count=count+bump;
+      bump=bump+1;
+      print=document.getElementById("bump");
+      print.innerHTML='Count '+count+' with bump '+bump;}
+  
+  
+
