--- a/views/selector.pug
+++ b/views/selector.pug
@@ -1,4 +1,6 @@
+extends layout
 block content
+
   h1= title
   - var image_names = ["pinkpanther", "pengu", "btss", "bean", "oswald"]
   - for(let i = 0; i < 3; i++) {
